[package]
name = "freebsd-geom-exporter"
version = "0.1.1"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/gstat-rs"
description = "Prometheus exporter for FreeBSD's GEOM device statistics"
keywords = ["freebsd", "geom", "monitoring", "prometheus"]
rust-version = "1.81"

[package.metadata.release]
pre-release-replacements = [
    { file="CHANGELOG.md", search="Unreleased", replace="{{version}}" },
    { file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}" }
]

[[bin]]
name = "geom-exporter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.14"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
freebsd-libgeom = { version = "0.3.0", path = "../freebsd-libgeom" }
log = "0.4.27"
prometheus = {version = "0.14.0", default-features = false, features = [] }
tokio = { version = "^1.25", features = ["macros", "net", "rt"] }

[dependencies.regex]
# Directly, gstat only needs regex 1.3.  But transitively bindgen needs 1.5.1 or later.
version = "1.6"
# Disable the unicode feature, since geom providers names are always ASCII
features = [ "perf", "std" ]
