[package]
name = "freebsd-libgeom-sys"
version = "0.1.0"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/gstat-rs"
description = "Rust FFI bindings to FreeBSD's libgeom library"
categories = ["external-ffi-bindings", "os::freebsd-apis"]
keywords = ["freebsd"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

# Skip tagging and pushing.  Those will be done by the gstat crate
[package.metadata.release]
disable-tag = true
disable-push = true

[dependencies]

[build-dependencies]
bindgen = { version = "0.53.1", features=[] }
