[package]
name = "freebsd-libgeom-sys"
version = "0.1.3"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/gstat-rs"
description = "Rust FFI bindings to FreeBSD's libgeom library"
categories = ["external-ffi-bindings", "os::freebsd-apis"]
keywords = ["freebsd"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[package.metadata.release]
pre-release-replacements = []

[dependencies]

[build-dependencies]
bindgen = { version = "0.64.0", features=[] }
# We don't use regex directly, but we must depend on 1.5.1 so that bindgen
# builds with -Zminimal-versions.
regex = "1.5.1"
