[package]
name = "freebsd-libgeom"
version = "0.2.0"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/gstat-rs"
description = "Rust bindings to FreeBSD's libgeom library"
categories = ["api-bindings", "os::freebsd-apis"]
keywords = ["freebsd"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

# Skip tagging and pushing.  Those will be done by the gstat crate
[package.metadata.release]
disable-tag = true
disable-push = true

[dependencies]
freebsd-libgeom-sys = { version = "= 0.1.1", path = "../freebsd-libgeom-sys" }
lazy_static = "1.4"

[dev-dependencies]
approx = "0.5.0"
nix = { version = "0.24.0", default-features = false, features = ["time"] }
