[package]
name = "greasestat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freebsd-libgeom = { path = "../freebsd-libgeom" }
gumdrop = "0.8.0"
humanize-rs = "0.1.5"
regex = "1"
rustbox = "0.11"
tui = { version = "0.15.0", features = ["rustbox"] }
