[package]
name = "gstat"
version = "0.1.0"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
description = "Enhanced replacement for FreeBSD's gstat utility"
categories = ["command-line-utilities"]
keywords = ["freebsd"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
confy = "0.4.0"
freebsd-libgeom = { version = "=0.1.0", path = "../freebsd-libgeom" }
gumdrop = "0.8.0"
humanize-rs = "0.1.5"
nix = "0.22.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
termion = "1.5"
tui = { version = "0.15.0", features = ["termion"] }

[dev-dependencies]
nonzero_ext = "0.2.0"
