[package]
name = "gstat"
version = "0.1.1"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/gstat-rs"
description = "Enhanced replacement for FreeBSD's gstat utility"
categories = ["command-line-utilities"]
keywords = ["freebsd"]
include = ["src/**/*", "LICENSE", "README.md"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[package.metadata.release]
tag-prefix = ""
pre-release-replacements = [
    { file="../CHANGELOG.md", search="Unreleased", replace="{{version}}" },
    { file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}" }
]

[dependencies]
bitfield = "0.13.2"
confy = "0.4.0"
freebsd-libgeom = { version = "0.2.0", path = "../freebsd-libgeom" }
humanize-rs = "0.1.5"
nix = "0.22.0"
serde = "1.0"
serde_derive = "1.0"
structopt = { version = "0.3.22", features = ["wrap_help"] }
termion = "1.5"
tui = { version = "0.15.0", features = ["termion"] }

[dependencies.regex]
version = "1"
# Disable the unicode feature, since geom providers names are always ASCII
features = [ "perf", "std" ]

[dev-dependencies]
nonzero_ext = "0.2.0"
